create enpoint secondpart
